# grupal_mpi_paralela

./: CMakeLists.txt  blelloch.cpp  blelloch.h  histograma.cpp  histograma.h  main.cpp
